--- a/index.html
+++ b/index.html
@@ -72,9 +72,20 @@
     <div class="container">
     <!-- Will add more projects as more work gets done-->
         <figure class="work-done">
+            <a href="https://daniel-pega.github.io/project-movie-night/" target="_blank">
+                <img src="./assets/images/Screen Shot 2022-07-28 at 9.20.23 PM.png" class="movie-project" alt="Random movie function">
+                <figcaption class="movie">
+                    Project Movie Night
+                    <br>
+                    Created a random movie function
+                </figcaption>              
+            </a>
+        </figure>
+
+        <figure class="horiseon">
             <a href="https://aalissy.github.io/First-Homework/" target="_blank">
                 <img src="./assets/images/Screen Shot 2022-06-10 at 10.17.05 AM.png" class="first-homework" alt="Horiseon Website">
-                <figcaption>
+                <figcaption class="seo">
                     Horiseon
                     <br>
                     Reformatted the CSS and HTML
