--- a/index.html
+++ b/index.html
@@ -71,7 +71,17 @@
         </div>
     <div class="container">
     <!-- Will add more projects as more work gets done-->
-        <figure class="work-done">
+    <figure class="work-done">
+        <a href="https://github.com/aalissy/DnD-Project" target="_blank">
+            <img src="./assets/images/Screen Shot 2022-09-26 at 9.23.51 PM.png" class="dnd-project" alt="Character creator">
+            <figcaption class="dnd">
+                DnD Project
+                <br>
+                Created a DnD character creator
+            </figcaption>              
+        </a>
+    </figure>
+        <figure class="movie-night">
             <a href="https://daniel-pega.github.io/project-movie-night/" target="_blank">
                 <img src="./assets/images/Screen Shot 2022-07-28 at 9.20.23 PM.png" class="movie-project" alt="Random movie function">
                 <figcaption class="movie">
