Final Project WOOHOOOO

--- a/index.html
+++ b/index.html
@@ -72,6 +72,16 @@
     <div class="container">
     <!-- Will add more projects as more work gets done-->
     <figure class="work-done">
+        <a href="https://peaceful-basin-12734.herokuapp.com/" target="_blank">
+            <img src="./assets/images/Screen Shot 2022-11-22 at 9.58.02 PM.png" class="wellness-project" alt="Character creator">
+            <figcaption class="welness-tracker">
+                Wellness Tracker
+                <br>
+                Created a Mood Tracker
+            </figcaption>              
+        </a>
+    </figure>
+    <figure class="dnd-project">
         <a href="https://github.com/aalissy/DnD-Project" target="_blank">
             <img src="./assets/images/Screen Shot 2022-09-26 at 9.23.51 PM.png" class="dnd-project" alt="Character creator">
             <figcaption class="dnd">
